--- a/Notepad/settings.properties
+++ b/Notepad/settings.properties
@@ -1,5 +1,5 @@
 #Font setting
-#Wed Jan 15 08:55:59 CET 2025
-fontfamily=Algerian
-fontsize=16
+#Fri Jan 17 14:16:45 CET 2025
+fontfamily=Arial Rounded MT Bold
+fontsize=12
 fontcolor=ff000000
